--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
