--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
+    "nanoid": "^4.0.2",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
